@@ -2,6 +2,7 @@ Just want to keep track of any changes I make here
 JSPong v1.4:
 	Added a pause menu
 	Added background music that corresponds to the success level
+	Implemented multiple levels
 
 JSPong v1.3.1:
 	Fixed a typo
